# zasend-python

./: LICENSE  README.md  pyproject.toml
examples/: basic.py  template.py
tests/: test_client.py
zasend/: __init__.py  client.py
